# cpp-VSCode-Template

./: CMakeLists.txt  CMakePresets.json  LICENSE  README.md
.github/workflows/: build-test-app.yml
doc/doxygen/: doxygenConfig
include/: Interface.h  Module.h
lib/: CMakeLists.txt
lib/include/: templateLib.h
lib/src/: templateLib.cpp
source/: CMakeLists.txt  Module.cpp  main.cpp  unittest_main.cpp
unittests/: CMakeLists.txt  unittest_Module.cpp
